# 2semestr

./: .gitignore  .gitmodules  README.md  clear  stop  tmp
Myscrpts/: CharSelectSort.c  CharSelectSort.с  heapname.py
OiympicProgrammingFolder/: Readme.md
OiympicProgrammingFolder/CodeForce/: cowsinstoilo.py
OiympicProgrammingFolder/FirstLession/: Fifth  Fifthtask.c  Fifthtask.py  FirstTask.c  FirstTask.py  Firstc  Fourth  FourthTask.c  FourthTask.py  SecondTask.py  ThirdTask.c  ThirdTask.py  Thirdc
OiympicProgrammingFolder/FourthLession/: A.py  B.py  C.py  D.c  D.py
OiympicProgrammingFolder/SecondLession/: A.py  B.py  C.py  D.py  E  E.c  F.py
OiympicProgrammingFolder/ThirdLession/: A.py  B.py  C.py  D.py  E.py  F.py
Programming/: First  FirstLab.c  Flab  Fourthlab.c  Pokher.c  Readme.md  Second  SecondLab.c  Secondplus  StrokeRotate.c  Test  Test.c  bf  linked_list.dot
Programming/GitFolder/: file.txt  sort.c
Programming/Manyfiles_project/: CMakeLists.txt  FourLab.txt  Readme  a.out  dynamic_dynamic  dynamic_exe  header.h  main.c  project  secondary.c
Programming/Pokher/: hello  hello.c  poker.c  (+2 more)
Saot/: 1.1  BF  BinaryFounder.c  BoubleSort.c  Digitalsort.c  First.c  First.cs  Heapsort.c  Indexirovanie.c  Insert  InsertSort.c  Lab1.1.5.py  Lab1.1.c  Lab1.2.c  Lab1.3.c  Listc.c  Mergesort.c  Quicksort.c  Readme.md  SS  Second  Select  SelectSort.c  ShellSort  ShellSort.c  a.out  data1.txt  data2.txt  firstfile  hard_search.c  hashtables_1.c  hashtables_2.c  ind  plot_script.gnu  shaker  shakersort  tablic.dot  tablic1.dot  tablic2.dot
web/: Readme.md
(+28 files in other folders)
